@@ -44,7 +44,7 @@
 
 enum action {
 	UPDATE = 1, INSTALL, REMOVE, SHOW, SEARCH, UPGRADE,
-	LIST, INSTALLED, CLEAN, SHOWVERSION
+	LIST, INSTALLED, CLEAN, SHOWVERSION, AUTOCLEAN
 };
 
 #define DEBUG 0
